27 Jul 96: Released TclX 7.5.3 - alpha 1 (Win32 alpha release)
===============================================================================
 8 Aug 96:
  o The runtime now installs under /usr/local/lib/{tclX,tkX} by default.
    (Hi Don).
-------------------------------------------------------------------------------
16 Aug 96:
  o Added support for ITcl namespaces to the profile command.  Change supplied
    by Christopher Hylands <cxh@EECS.Berkeley.EDU>.
-------------------------------------------------------------------------------
20 Aug 96:
  o Search for the TclX init files and library directories in the same manner
    as Tcl/Tk.  This removes the tclx/tkx_library_env, tclx/tkx_init libraries
    Tcl variables.  This removes some of the flexability, but makes it
    consistent with Tcl/Tk and simplifies Win32 port.
   (* potential incompatibility *)
===============================================================================
17 Sep 96: Released TclX 7.6.0 Beta 1
===============================================================================
17 Sep 96:
  o Added the cconcat and lcontain commands.
-------------------------------------------------------------------------------
17 Sep 96:
  o New profiler alogrithm that correctly handles certain uplevel cases.
  o Added -eval option to the profile command, allowing capturing eval stacks
    instead of scope stacks.
-------------------------------------------------------------------------------
 3 Oct 96:
  o Integrated support for building both shared and static libraries at the
    same time from Jan Nijtmans' <nijtmans@nici.kun.nl> TclX plus patch.
  o Deprecated the mkdir, rmdir, unlink and frename commands in favor of the
    new file subcommands. Compatbility with these commands is still supported
    for old scripts via procedures in the TclX library.
-------------------------------------------------------------------------------
